hphp/hack/test/typecheck/inout/bad_inout_hint_return5.php.exp
File "bad_inout_hint_return5.php", line 4, characters 10-17:
Invalid return type (Typing[4110])
File "bad_inout_hint_return5.php", line 4, characters 25-30:
This is a string
File "bad_inout_hint_return5.php", line 3, characters 33-35:
It is incompatible with an int
