hphp/hack/test/typecheck/inout/bad_inout_hint_return5.php
<?hh // strict

function foo(): (function(inout int): int) {
  return function(inout string $x) {
    return 42;
  };
}
